--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Елит Такси - Ямбол</title>
+  <meta name="viewport"
+    content="width=device-width,
+    initial-scale=1.0">
   <link rel="stylesheet" href="style.css" />
+
+
 </head>
 <body>
 
@@ -90,4 +95,5 @@
   </footer>
 
 </body>
+
 </html>
