--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width,
     initial-scale=1.0">
   <link rel="stylesheet" href="style.css" />
-
+<meta name="google-site-verification" content="Am8CVVo5xhW79p--hjPzT-X9vm-jEadlruRd6li2O6k" />
 
 </head>
 <body>
@@ -97,3 +97,4 @@
 </body>
 
 </html>
+
