--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <header>
-    <img src="c:\Users\teodor\Desktop\ELIT\72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
+    <img src="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
     <nav class="top-buttons">
       <a href="ELIT.html">Начало</a>
       <a href="za nas.html">За нас</a>
@@ -60,9 +60,9 @@
 
 
     <div class="slider-container">
-        <div class="slide s1"><img src="c:\Users\teodor\Desktop\ELIT\72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Такси 1"></div>
-        <div class="slide s2"><img src="c:\Users\teodor\Desktop\ELIT\729f49eb-2968-4f69-9c5f-0453db55581f.jpeg" alt="Такси 2"></div>
-        <div class="slide s3"><img src="c:\Users\teodor\Desktop\ELIT\844498ba-2f14-4880-b270-a3bd860970fa.jpg" alt="Такси 3"></div>
+        <div class="slide s1"><img src="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Такси 1"></div>
+        <div class="slide s2"><img src="729f49eb-2968-4f69-9c5f-0453db55581f.jpeg" alt="Такси 2"></div>
+        <div class="slide s3"><img src="844498ba-2f14-4880-b270-a3bd860970fa.jpg" alt="Такси 3"></div>
   
    <label for="slide3" class="arrow left-arrow slide1-arrow">&#10094;</label>
    <label for="slide2" class="arrow right-arrow slide1-arrow">&#10095;</label>
@@ -97,4 +97,5 @@
 </body>
 
 </html>
+
 
