--- a/kontakt.html
+++ b/kontakt.html
@@ -9,9 +9,9 @@
 <body>
 
   <header>
-    <img src="c:\Users\teodor\Desktop\ELIT\72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
+    <img src="c:72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
     <nav class="top-buttons">
-     <a href="ELIT.html">Начало</a>
+     <a href="index.html">Начало</a>
       <a href="za nas.html">За нас</a>
       <a href="kontakt.html">Контакт</a>
      
@@ -51,4 +51,5 @@
   </footer>
 
 </body>
+
 </html>
