--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     initial-scale=1.0">
   <link rel="stylesheet" href="style.css" />
 <meta name="google-site-verification" content="Am8CVVo5xhW79p--hjPzT-X9vm-jEadlruRd6li2O6k" />
-
+<meta name="keywords" content= Елит Такси Ямбол, Такси Ямбол, таксиметрови услуги,теранспорт Ямбол, бързо такси,дононощно такси,поръчка такси ямбол">
+<link rel="icon"
+  href="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icon"
 </head>
 <body>
 
   <header>
     <img src="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
     <nav class="top-buttons">
-      <a href="ELIT.html">Начало</a>
+      <a href="index.html">Начало</a>
       <a href="za nas.html">За нас</a>
      
   <a href="kontakt.html">Контакт</a>
@@ -97,5 +99,6 @@
 </body>
 
 </html>
+
 
 
