--- a/za nas.html
+++ b/za nas.html
@@ -11,7 +11,7 @@
   <header>
     <img src="c:\Users\teodor\Desktop\ELIT\72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Елит Такси Ямбол" class="logo" />
     <nav class="top-buttons">
-      <a href="ELIT.html">Начало</a>
+      <a href="index.html">Начало</a>
       <a href="za nas.html">За нас</a>
       <a href="kontakt.html">Контакт</a>
      
@@ -76,4 +76,5 @@
   </footer>
 
 </body>
+
 </html>
