--- a/za nas.html
+++ b/za nas.html
@@ -9,12 +9,12 @@
 <body>
 
   <header>
-    <img src="c:\Users\teodor\Desktop\ELIT\72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Елит Такси Ямбол" class="logo" />
+    <img src="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Елит Такси Ямбол" class="logo" />
     <nav class="top-buttons">
       <a href="index.html">Начало</a>
       <a href="za nas.html">За нас</a>
       <a href="kontakt.html">Контакт</a>
-     
+     <link rel="icon" href="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icon">
     </nav>
   </header>
 
@@ -78,3 +78,4 @@
 </body>
 
 </html>
+
