--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
      <a href="index.html">Начало</a>
       <a href="za nas.html">За нас</a>
       <a href="kontakt.html">Контакт</a>
-     
+     <link rel="icon" href=72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icone
 
 
     </nav>
@@ -53,3 +53,4 @@
 </body>
 
 </html>
+
