--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Контакт - Елит Такси Ямбол</title>
   <link rel="stylesheet" href="style2.css" />
-  <link rel="icon" href="c:72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icone
+  <link rel="icon" href="c:72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icone"
 </head>
 <body>
 
@@ -52,6 +52,7 @@
 </body>
 
 </html>
+
 
 
 
