--- a/kontakt.html
+++ b/kontakt.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Контакт - Елит Такси Ямбол</title>
   <link rel="stylesheet" href="style2.css" />
-  <link rel="icon" href="c:72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icone"
+  <link rel="icon" href="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icone"
 </head>
 <body>
 
   <header>
-    <img src="c:72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
+    <img src="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
       <nav class="top-buttons">
      <a href="index.html">Начало</a>
       <a href="za nas.html">За нас</a>
@@ -52,6 +52,7 @@
 </body>
 
 </html>
+
 
 
 
