--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header>
+  <header class="top-bar">
     <img src="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
 
     <nav class="top-buttons">
@@ -53,6 +53,7 @@
 </body>
 
 </html>
+
 
 
 
