--- a/kontakt.html
+++ b/kontakt.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 
-  <header class="top-bar">
+  <header>
     <img src="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" alt="Емблема" class="logo" />
-
+ 
     <nav class="top-buttons">
      <a href="index.html">Начало</a>
       <a href="za nas.html">За нас</a>
       <a href="kontakt.html">Контакт</a>
     
     </nav>
-    </header>
+  </header>
 
   <main>
     <section class="contact-section">
@@ -53,6 +53,7 @@
 </body>
 
 </html>
+
 
 
 
