--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Елит Такси - Ямбол</title>
+  <title>Елит Такси  Ямбол</title>
   <meta name="viewport"
     content="width=device-width,
     initial-scale=1.0">
@@ -99,6 +99,7 @@
 </body>
 
 </html>
+
 
 
 
