--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="style.css" />
 <meta name="google-site-verification" content="Am8CVVo5xhW79p--hjPzT-X9vm-jEadlruRd6li2O6k" />
 <meta name="keywords" content= Елит Такси Ямбол, Такси Ямбол, таксиметрови услуги,теранспорт Ямбол, бързо такси,дононощно такси,поръчка такси ямбол">
-<link rel="icon"
+<meta name="description" content="Елит Такси Ямбол - бърз,сигурен и лицензиран транспорт.Работим 24/7.">
+  <link rel="icon"
   href="72e4ccaf-0a22-4294-88d2-f65d1dbe091f.png" type="image/x-icon">
 </head>
 <body>
@@ -99,6 +100,7 @@
 </body>
 
 </html>
+
 
 
 
